istio_virtual_service_canary.yml
# Istio VirtualService Canary
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-app-canary
spec:
  hosts:
  - "*"
  gateways:
  - node-app-gateway
  http:
  - route:
    - destination:
        host: node-app-service
        port:
          number: 80
      weight: 80
    - destination:
        host: node-app2-service
        port:
          number: 80
      weight: 20
